<resources>
    <string name="app_name">Crypto Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home_view">HomeView</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in"><u>Iniciar sesión</u></string>
    <string name="sign_up"><u>Crear cuenta</u></string>
    <string name="incorrect_login_inputs">Debe rellenar los campos de email y contraseña</string>
    <string name="incorrect_user">Usuario incorrecto</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="something_wrong">Oh no! Algo ha ido mal...</string>
    <string name="all_fields_are_mandatory">Debe rellenar todos los campos</string>
    <string name="different_passwords">Las contraseñas no son iguales</string>
    <string name="invalid_email_format">El email introducido no es válido</string>
    <string name="user_already_exists">Ya existe un usuario con este email</string>
    <string name="news">Noticias</string>
    <string name="news_detail">Noticia</string>
    <string name="saved_news">La noticia se ha guardado correctamente</string>
    <string name="news_already_exists">La noticia que intenta guardar ya ha sido almacenada previamente</string>
    <string name="filters">Filtros</string>
    <string name="sort">Ordenación</string>
    <string name="rising_filters">Destacados</string>
    <string name="hot_filters">Populares</string>
    <string name="important_filters">Importantes</string>
    <string name="lol_filters">Desternillantes</string>
    <string name="dialog_news_fragment_error">Debe selecciona una criptomoneda y un valor de ordenación</string>
    <string name="converter">Conversor</string>
    <string name="statistics">Estadísticas</string>
    <string name="my_account">Mi cuenta</string>
    <string name="confirm_delete_account_message">¿Está seguro de eliminar su cuenta?</string>
    <string name="coins">Monedas</string>
    <string name="time_interval">Intervalo de tiempo en gráficas</string>
    <string name="data_update">Actualización de datos</string>
    <string name="one_day">1 día</string>
    <string name="one_week">1 semana</string>
    <string name="one_month">1 mes</string>
    <string name="three_months">3 meses</string>
    <string name="six_months">6 meses</string>
    <string name="one_year">1 año</string>
    <string name="five_minutes">5 minutos</string>
    <string name="fifteen_minutes">15 minutos</string>
    <string name="thirty_minutes">30 minutos</string>
    <string name="one_hour">1 hora</string>
    <string name="three_hours">3 horas</string>
    <string name="six_hours">6 horas</string>
    <string name="nine_hours">9 horas</string>
    <string name="saved_news_title">Noticias guardadas</string>
    <string name="delete_investment_error">No se ha podido borrar la inversión seleccionada</string>
    <string name="edit_investment_error">No se ha podido modificar la inversión seleccionada</string>
    <string name="edit_investment_purchase_validation">Debe añadir un valor de inversión</string>
    <string name="server_error">Error al obtener datos de una API externa</string>
    <string name="local_error">Error al obtener datos almacenados localmente</string>
    <string name="not_found_error">No se han encontrado datos</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="cryptocurrency_statistics_view_cryptocurrency_request_successful">La petición de la información de una criptomoneda se ha realizado correctamente</string>
    <string name="cryptocurrency_statistics_view_cryptocurrency_request_failed">La petición de la información de una criptomoneda ha fallado</string>
    <string name="cryptocurrency_statistics_view_investment_request_successful">La petición de la información de una inversión se ha realizado correctamente</string>
    <string name="cryptocurrency_statistics_view_investment_request_failed">La petición de la información de una inversión ha fallado</string>
    <string name="cryptocurrency_statistics_view_investment_request_not_found">La petición de la información de una inversión para una criptomoneda no se ha encontrado</string>
    <string name="cryptocurrency_statistics_view_cryptocurrency_chart_request_successful">La petición de los datos para la gráfica de una criptomoneda se ha realizado correctamente</string>
    <string name="cryptocurrency_statistics_view_cryptocurrency_chart_request_failed">La petición de los datos para la gráfica de una criptomoneda ha fallado</string>
    <string name="one_day_button">24h</string>
    <string name="one_week_button">1w</string>
    <string name="one_month_button">1m</string>
    <string name="three_months_button">3m</string>
    <string name="six_months_button">6m</string>
    <string name="one_year_button">1y</string>
    <string name="ranking">Ranking</string>
    <string name="btc_price">Precio en BTC</string>
    <string name="volume">Volumen</string>
    <string name="available_supply">Acciones disponibles</string>
    <string name="total_supply">Acciones totales</string>
    <string name="market_cap">Capitalización</string>
    <string name="investment">Inversión</string>
    <string name="quantity">Cantidad</string>
    <string name="value">Valor</string>
    <string name="links">Enlaces</string>
    <string name="exchange_view_fiats_request_successful">La petición de la información de monedas fiduciarias se ha realizado correctamente</string>
    <string name="exchange_view_fiats_request_failed">La petición de la información de monedas fiduciarias ha fallado</string>
    <string name="local_cryptocurrencies_request_succesful">La petición de la información de las criptomonedas almacenadas se ha realizado correctamente</string>
    <string name="local_cryptocurrencies_request_failed">La petición de la información de las criptomonedas almacenadas ha fallado</string>
    <string name="local_cryptocurrencies_request_not_found">La petición de la información de las criptomonedas almacenadas no se ha encontrado</string>
    <string name="exchange_view_empty_local_cryptocurrency_message">No sigues a ninguna criptomoneda. Por favor, selecciona Pulsa el botón de criptomonedas para convertir un valor</string>
    <string name="item_no_selected">No se ha seleccionado ningún elemento</string>
    <string name="cryptocurrency_request_successful">La petición de las criptomonedas se ha realizado correctamente</string>
    <string name="cryptocurrency_request_failed">La petición de las criptomonedas ha fallado</string>
    <string name="cryptocurrency_request_not_found">La petición de las criptomonedas no se ha encontrado</string>
    <string name="investment_request_successful">La petición de la inversión se ha realizado correctamente</string>
    <string name="investment_request_failed">La petición de la inversión ha fallado</string>
    <string name="investment_request_not_found">La petición de la inversión no se ha encontrado</string>
    <string name="investment_dialog_invalidate_message">Debe selecciona una criptomoneda y añadir un valor adquirido</string>
    <string name="home_view_quote_request_successful">La petición de la cita se ha realizado correctamente</string>
    <string name="home_view_quote_request_failed">La petición de la cita ha fallado</string>
    <string name="investment_delete_request_failed">La petición para borrar una inversión ha fallado</string>
    <string name="investment_update_request_failed">La petición para actualizar una inversión ha fallado</string>
    <string name="local_cryptocurrency_delete_request_failed">La petición para borrar una criptomoneda almacenada localmente ha fallado</string>
    <string name="user_request_successful">La petición de los datos del usuario se ha realizado correctamente</string>
    <string name="user_request_failed">La petición de los datos del usuario ha fallado</string>
    <string name="user_preferences_request_successful">La petición de las preferencias del usuario se ha realizado correctamente</string>
    <string name="user_preferences_request_failed">La petición de las preferencias del usuario ha fallado</string>
    <string name="user_password_request_successful">La petición de la contraseña del usuario se ha realizado correctamente</string>
    <string name="user_password_request_failed">La petición de la contraseña del usuario ha fallado</string>
    <string name="user_update_request_successful">La petición para actualizar la información del usuario se ha realizado correctamente</string>
    <string name="user_update_request_failed">La petición para actualizar la información del usuario ha fallado</string>
    <string name="user_session_request_successful">La sesión del usuario se ha realizado correctamente</string>
    <string name="user_session_request_failed">La sesión del usuario ha fallado</string>
    <string name="news_save_request_successful">La noticia se ha guardado correctamente</string>
    <string name="news_save_request_failed">El guardado de la noticia ha fallado</string>
    <string name="news_request_successful">La petición para obtener las noticias se ha realizado correctamente</string>
    <string name="news_request_failed">La petición para obtener las noticias ha fallado</string>
    <string name="news_delete_request_successful">La noticia guardada se ha borrado correctamente</string>
    <string name="news_delete_request_failed">La noticia guardada no se ha podido borrar</string>
    <string name="user_register_succesful">El usuario se ha registrado correctamente</string>
    <string name="user_register_failed">El registro del usuario ha fallado</string>
    <string name="user_session_not_stored">No hay ninguna sesión de usuario almacenada. Lanzando Login View</string>
    <string name="logout_successful">EL usuario ha cerrado sesión correctamente</string>
    <string name="logout_failed">No se ha podido cerrar sesión</string>
    <string name="account_delete_successful">Se ha eliminado toda la información relacionada con una cuenta correctamente</string>
    <string name="account_delete_failed">No se ha podido eliminar la cuenta</string>
    <string name="user_preferences_not_validated">Debe seleccionar una moneda, un intervalo de tiempo y un tiempo de actualización de datos</string>
    <string name="eur">EUR</string>
    <string name="btc">BTC</string>
    <string name="criptomonedas">Criptomonedas</string>
    <string name="portfolio">Portfolio</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="crypto_tracker">CRYPTO TRACKER</string>
    <string name="hola_de_nuevo">¡Hola de nuevo!</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="continuar_con_facebook">Continuar con Facebook</string>
    <string name="continuar_con_twitter">Continuar con Twitter</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="todavia_no_eres_miembro">¿Todavía no eres miembro?</string>
    <string name="unete_a_nosotros">¡Únete a nosotros!</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="eres_miembro">¿Eres miembro?</string>
    <string name="crypto">CRYPTO</string>
    <string name="tracker">TRACKER</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_gmail_com">correo@gmail.com</string>
    <string name="añadir">Añadir</string>
</resources>