<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dialog_shape"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/criptomonedas"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="30dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <include
                android:id="@+id/exchange_dialog_cryptocurency_progress_bar"
                layout="@layout/progress"/>

            <include
                android:id="@+id/exchange_dialog_cryptocurrencies_error"
                layout="@layout/error"/>

            <include
                android:id="@+id/exchange_dialog_empty_cryptocurrencies"
                layout="@layout/empty" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exchange_dialog_cryptocurrency_list_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/exchange_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/cancel_button_shape"
                android:alpha="0.85">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="12sp"
                    android:text="@string/cancelar"
                    android:textColor="@color/third_accent_color"
                    android:gravity="center"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exchange_dialog_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/confirm_button_shape"
                android:alpha="0.85">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="12sp"
                    android:text="@string/añadir"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_margin="10dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>